configured mysql database

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 # Ant properties for building the springapp
 
-appserver.home=${user.home}/softwares/apache-tomcat-6.0.26
+appserver.home=D:/Program Files/Apache Software Foundation/Tomcat 8.0
 # for Tomcat 5 use $appserver.home}/server/lib
 # for Tomcat 6 use $appserver.home}/lib
 appserver.lib=${appserver.home}/lib
@@ -8,10 +8,10 @@ appserver.lib=${appserver.home}/lib
 deploy.path=${appserver.home}/webapps
 
 tomcat.manager.url=http://localhost:8080/manager
-tomcat.manager.username=tomcat
-tomcat.manager.password=s3cret
+tomcat.manager.username=admin
+tomcat.manager.password=admin
 
-db.driver=org.hsqldb.jdbcDriver
-db.url=jdbc:hsqldb:hsql://localhost
-db.user=sa
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/springapp
+db.user=root
 db.pw=
