--- a/war/WEB-INF/classes/jdbc.properties
+++ b/war/WEB-INF/classes/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:hsql://localhost
-jdbc.username=sa
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/springapp
+jdbc.username=root
 jdbc.password=
